# Sofruner

./: .gitignore  CMakeLists.txt  README.md  delete_releasepackage.bat  delete_releasepackage.vbs  main.cpp  start_gui_with_python.bat  start_gui_with_python.vbs
Sofruner-ng/: Makefile  README.md  Sofruner-ng.sln
Sofruner-ng/Sofruner-ng/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  SQLiteAPI.cs  Sofruner-ng.csproj  app.manifest
Sofruner-ng/Sofruner-ng/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
config/: config.ini
icon/: sofrunerico.rc
include/: find_process.h
py/: Makefile  sofruner.py  sofruner.spec
src/: find_process.cpp
